--- a/src/main/resources/templates/indicators/tables/physical-changes-table.html
+++ b/src/main/resources/templates/indicators/tables/physical-changes-table.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title th:if="${isSelf}">Ваши физические изменения</title>
-        <title th:if="${!isSelf}" th:text="'Физические изменения пациента &laquo;' + ${patient.userInformation.fullName} + '&raquo;'">Физические изменения пациента "Иванов Степан Петрович"</title>
+        <title th:if="${isSelf}">Динамика ваших физических изменений</title>
+        <title th:if="${!isSelf}" th:text="'Динамика физических изменений пациента &laquo;' + ${patient.userInformation.fullName} + '&raquo;'">'Динамика физических изменений пациента "Иванов Степан Петрович"</title>
         <link href="../../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
         <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" th:href="@{https://unpkg.com/gridjs/dist/theme/mermaid.min.css}" rel="stylesheet" />
@@ -21,9 +21,9 @@
         <div class="container text-secondary my-5">
             <!---->
             <div class="row fs-5 mb-5">
-                <h1 th:if="${isSelf}" class="text-center fs-3 mb-0">Ваши физические изменения</h1>
+                <h1 th:if="${isSelf}" class="text-center fs-3 mb-0">Динамика ваших физических изменений</h1>
                 <h1 th:if="${!isSelf}" class="text-center fs-3 mb-0">
-                    Физические изменения пациента
+                    Динамика физических изменений пациента
                     <span th:text="${patient.userInformation.fullName}" class="fw-bold">Петров Сергей Иванович</span>
                 </h1>
             </div>
