Поправил информацию, отображаемую на форме отправки спирометрии.

--- a/src/main/resources/templates/indicators/forms/spirometry-form.html
+++ b/src/main/resources/templates/indicators/forms/spirometry-form.html
@@ -28,20 +28,20 @@
                 <div class="col-12">
                     <form action="#" method="post" id="spirometry-form" class="fs-5">
                         <div class="mb-5 col-12 col-md-6 col-lg-4">
-                            <label for="vlc" class="form-label fw-semibold fs-4">ЖЕЛ</label>
-                            <input type="number" step="0.01" name="vlc" id="vlc" class="form-control" placeholder="1134.1" />
+                            <label for="vlc" class="form-label fw-semibold fs-4">ЖЕЛ (л)</label>
+                            <input type="number" step="0.01" name="vlc" id="vlc" class="form-control" placeholder="6.53" />
                         </div>
                         <div class="mb-5 col-12 col-md-6 col-lg-4">
-                            <label for="avlc" class="form-label fw-semibold fs-4">ФЖЕЛ</label>
-                            <input type="number" step="0.01" name="avlc" id="avlc" class="form-control" placeholder="1402.89" />
+                            <label for="avlc" class="form-label fw-semibold fs-4">ФЖЕЛ (л)</label>
+                            <input type="number" step="0.01" name="avlc" id="avlc" class="form-control" placeholder="6.35" />
                         </div>
                         <div class="mb-5 col-12 col-md-6 col-lg-4">
-                            <label for="rlv" class="form-label fw-semibold fs-4">ООЛ</label>
-                            <input type="number" step="0.01" name="rlv" id="rlv" class="form-control" placeholder="430" />
+                            <label for="rlv" class="form-label fw-semibold fs-4">ООЛ (л)</label>
+                            <input type="number" step="0.01" name="rlv" id="rlv" class="form-control" placeholder="2.79" />
                         </div>
                         <div class="mb-5 col-12 col-md-6 col-lg-4">
-                            <label for="vfe1" class="form-label fw-semibold fs-4">ОФВ1</label>
-                            <input type="number" step="0.01" name="vfe1" id="vfe1" class="form-control" placeholder="764.98" />
+                            <label for="vfe1" class="form-label fw-semibold fs-4">ОФВ1 (л)</label>
+                            <input type="number" step="0.01" name="vfe1" id="vfe1" class="form-control" placeholder="4.63" />
                         </div>
                         <button type="submit" class="btn btn-lg btn-primary">Отправить</button>
                     </form>
