Поправил стиль страницы показателей, добавил выдачу атрибута isSelf.

--- a/src/main/resources/templates/indicators/indicators.html
+++ b/src/main/resources/templates/indicators/indicators.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Показатели</title>
+        <title th:if="${isSelf}">Ваши показатели</title>
+        <title th:if="${!isSelf}" th:text="'Показатели пациента &laquo;' + ${patient.userInformation.fullName} + '&raquo;'">ВеДинамика весас пациента "Иванов Степан Петрович"</title>
         <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
         <link rel="apple-touch-icon" sizes="180x180" href="../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
@@ -18,7 +19,15 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 text-center g-3 mb-5">
+            <div class="row fs-5 mb-5">
+                <h1 th:if="${isSelf}" class="text-center fs-3 mb-0">Ваши показатели</h1>
+                <h1 th:if="${!isSelf}" class="text-center fs-3 mb-0">
+                    Показатели пациента
+                    <span th:text="${patient.userInformation.fullName}" class="fw-bold">Петров Сергей Иванович</span>
+                </h1>
+            </div>
+            <!---->
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 text-center g-3">
                 <div class="col mx-auto" th:each="each : ${cards}">
                     <div class="card bg-indicator text-secondary">
                         <img src="../../static/img/indicators/Давление.jpg" th:src="@{'/img/indicators/' + ${each.filename}}" class="card-img-top rounded px-2 pt-2" alt="Давление" />
@@ -29,11 +38,11 @@
                                     <img width="18" class="mb-1" src="../../static/svg/edit.svg" th:src="@{/svg/edit.svg}" alt="Редактировать" />
                                 </a>
                                 <img width="18" class="mb-1" th:if="${currentUser.isPatient}" src="../../static/svg/schedule.svg" th:src="@{/svg/schedule.svg}" alt="Расписание" />
-                                Текущее расписание: <span th:attr="data-schedule=${each.indicatorType}" class="text-lowercase" th:text="${each.schedule != null} ? ${each.schedule} : 'Отсутствует'">Три раза в неделю</span>
+                                Текущее расписание: <span th:attr="data-schedule=${each.indicatorType}" class="text-lowercase fw-semibold" th:text="${each.schedule != null} ? ${each.schedule} : 'Отсутствует'">Три раза в неделю</span>
                             </p>
                             <p class="mb-3">
                                 <img width="18" class="mb-1" src="../../static/svg/date.svg" th:src="@{/svg/date.svg}" alt="Дата" />
-                                Дата последней отправки: <span class="text-lowercase" th:text="${each.date != null} ? ${each.formattedDate} : 'Ни разу не отправлял'">14:48:56 20-11-2019</span>
+                                Дата последней отправки: <span class="text-lowercase fw-semibold" th:text="${each.date != null} ? ${each.formattedDate} : 'Ни разу не отправлял'">14:48:56 20-11-2019</span>
                             </p>
                             <p class="mb-3" th:if="${each.isTableInputIndicatorCard}">
                                 <img width="18" class="mb-1" src="../../static/svg/table.svg" th:src="@{/svg/table.svg}" alt="Таблица" />
