Изменил название приложения в соответствии с изменённой формулировкой дипломной темы. Поправил название в футере и на главной странице. Поправил информацию, выдаваемую в футере.

--- a/src/main/resources/templates/fragments/footers/footer.html
+++ b/src/main/resources/templates/fragments/footers/footer.html
@@ -8,8 +8,8 @@
             <div class="container p-2">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
                     <div class="text-secondary text-center text-md-start m-2 m-md-0">
-                        <p class="mb-1">Приложение для мониторинга состояния здоровья пациентов с ЛАГ</p>
-                        <p class="mb-1">Проект реализован в рамках выполнения дипломной работы</p>
+                        <p class="mb-1">Приложение для мониторинга состояния пациентов с лёгочной артериальной гипертензией</p>
+                        <p class="mb-1">Дипломная работа студента Панько Ивана Сергеевича</p>
                         <p class="mb-0">СПбГЭТУ "ЛЭТИ", 2023/2024 год</p>
                     </div>
                     <div class="m-2 m-md-0">
