--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -20,7 +20,7 @@
             <!---->
             <div class="row text-center mb-2">
                 <div class="col-12">
-                    <h1 class="fs-2">Приложение для мониторинга состояния здоровья пациентов с ЛАГ</h1>
+                    <h1 class="fs-2">Приложение для мониторинга состояния пациентов с лёгочной артериальной гипертензией</h1>
                 </div>
             </div>
             <!---->
