--- a/src/main/resources/templates/indicators/tables/walk-test-table.html
+++ b/src/main/resources/templates/indicators/tables/walk-test-table.html
@@ -28,9 +28,20 @@
                 </h1>
             </div>
             <!---->
-            <div class="row">
+            <div class="row mb-5">
                 <div class="col-12">
                     <div id="table" th:attr="data-patient=${patient.id}"></div>
+                </div>
+            </div>
+            <!---->
+            <div class="row">
+                <div class="col-12">
+                    <h4 class="fs-5">Примечание</h4>
+                    <div class="fs-6">
+                        В записи результатов вида
+                        <span class="fw-semibold">N → M</span>
+                        число слева от стрелки означает результат до физической нагрузки, а число справа от стрелки - соответственно после
+                    </div>
                 </div>
             </div>
             <!---->
