--- a/src/main/resources/templates/indicators/graphics/pressure-graphic.html
+++ b/src/main/resources/templates/indicators/graphics/pressure-graphic.html
@@ -27,30 +27,15 @@
                 </h1>
             </div>
             <!---->
-            <!--<div class="row">
-                <div class="col-12">
-                    <canvas id="myChart" th:attr="data-patient=${patient.id}"></canvas>
+            <div class="row row-cols-1 row-cols-md-2 text-center g-3">
+                <div class="col text-center mx-auto">
+                    <canvas class="text-center" id="before"></canvas>
                 </div>
-            </div>-->
+                <div class="col text-center mx-auto">
+                    <canvas class="text-center" id="after"></canvas>
+                </div>
+            </div>
             <!---->
-            <!--div class="row row-cols-1 row-cols-md-2 text-center g-5">
-                <div class="col mx-auto">
-                    <canvas id="upper" th:attr="data-patient=${patient.id}"></canvas>
-                </div>
-                <div class="col mx-auto">
-                    <canvas id="lower" th:attr="data-patient=${patient.id}"></canvas>
-                </div>
-            </div>-->
-            <div class="row mb-5">
-                <div class="col-12">
-                    <canvas id="upper"></canvas>
-                </div>
-            </div>
-            <div class="row mb-5">
-                <div class="col-12">
-                    <canvas id="lower"></canvas>
-                </div>
-            </div>
         </div>
         <!---->
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
