--- a/src/main/resources/templates/indicators/forms/analysis-file-form.html
+++ b/src/main/resources/templates/indicators/forms/analysis-file-form.html
@@ -26,18 +26,18 @@
             <!---->
             <div class="row">
                 <div class="col-12">
-                    <form action="#" method="post" id="file-form" class="fs-5">
-                        <div class="mb-3">
-                            <label for="file1" class="form-label">Первый файл</label>
-                            <div class="d-flex flex-row align-items-center justify-content-between">
-                                <input type="file" name="file1" id="file1" class="form-control flex-grow-1 me-2" />
-                                <a href="#" class="text-decoration-none mx-2">
-                                    <img width="32" src="../../../static/svg/minus.svg" th:src="@{/svg/message.svg}" alt="Сообщение" />
-                                </a>
-                                <a href="#" class="text-decoration-none mx-2">
-                                    <img width="32" src="../../../static/svg/plus.svg" th:src="@{/svg/message.svg}" alt="Сообщение" />
-                                </a>
+                    <form action="#" method="post" id="file-form" name="file-form" class="fs-5">
+                        <div class="d-flex flex-row mb-1">
+                            <div class="flex-grow-1 me-1">
+                                <label for="file" class="form-label">Файл </label>
+                                <input type="file" name="file" id="file" class="form-control" />
                             </div>
+                            <div class="mt-auto ms-1">
+                                <button type="submit" class="btn btn-primary">Отправить</button>
+                            </div>
+                        </div>
+                        <div>
+                            <span class="fs-6">Поддерживаемые форматы: pdf</span>
                         </div>
                     </form>
                 </div>
