--- a/src/main/resources/templates/indicators/forms/analysis-file-form.html
+++ b/src/main/resources/templates/indicators/forms/analysis-file-form.html
@@ -39,6 +39,9 @@
                         <div>
                             <span class="fs-6">Поддерживаемые форматы: pdf</span>
                         </div>
+                        <div>
+                            <span class="fs-6">Максимальный размер файла: 10 Мб</span>
+                        </div>
                     </form>
                 </div>
             </div>
