--- a/src/main/resources/templates/patient_additions/anamnesis.html
+++ b/src/main/resources/templates/patient_additions/anamnesis.html
@@ -35,27 +35,23 @@
                 <div class="col-12">
                     <div class="mb-5">
                         <h4 class="fs-4">Врождённые пороки сердца</h4>
-                        <span th:if="${anamnesis.heartDisease}">Есть</span>
-                        <span th:if="${!anamnesis.heartDisease}">Нет</span>
+                        <span th:text="${anamnesis.heartDisease}">Есть</span>
                     </div>
                     <div class="mb-5">
                         <h4 class="fs-4">Хронические заболевания лёгких</h4>
-                        <span th:if="${anamnesis.lungDisease}">Есть</span>
-                        <span th:if="${!anamnesis.lungDisease}">Нет</span>
+                        <span th:text="${anamnesis.lungDisease}">Нет</span>
                     </div>
                     <div class="mb-5">
                         <h4 class="fs-4">Хронические заболевания сердца или лёгких у родственников</h4>
-                        <span th:if="${anamnesis.relativesDiseases}">Есть</span>
-                        <span th:if="${!anamnesis.relativesDiseases}">Нет</span>
+                        <span th:text="${anamnesis.relativesDiseases}">Есть</span>
                     </div>
                     <div class="mb-5">
                         <h4 class="fs-4">Свёртываемость крови</h4>
-                        <span th:text="${anamnesis.bloodClotting.alias}">Кровь долго не останавливается</span>
+                        <span th:text="${anamnesis.bloodClotting}">Кровь долго не останавливается</span>
                     </div>
                     <div class="mb-5">
                         <h4 class="fs-4">Сахарный диабет</h4>
-                        <span th:if="${anamnesis.diabetes}">Есть</span>
-                        <span th:if="${!anamnesis.diabetes}">Нет</span>
+                        <span th:text="${anamnesis.diabetes}">Есть</span>
                     </div>
                     <div class="mb-5">
                         <h4 class="fs-4">Рост</h4>
