--- a/src/main/resources/templates/indicators/plain/analysis-file-plain.html
+++ b/src/main/resources/templates/indicators/plain/analysis-file-plain.html
@@ -58,7 +58,9 @@
                         <span th:text="${each.formattedDate}">17-09-2019 12:58:57</span>
                     </div>
                     <div class="m-2 m-md-0">
-                        <img width="28" src="../../../static/svg/download.svg" th:src="@{/svg/download.svg}" alt="Загрузить" />
+                        <a href="#" th:href="@{/download/analysis-file/__${each.filename}__}" class="text-decoration-none">
+                            <img width="28" src="../../../static/svg/download.svg" th:src="@{/svg/download.svg}" alt="Загрузить" />
+                        </a>
                     </div>
                 </div>
             </div>
