--- a/src/main/resources/templates/indicators/plain/analysis-file-plain.html
+++ b/src/main/resources/templates/indicators/plain/analysis-file-plain.html
@@ -48,6 +48,8 @@
                 </div>
             </div>
             <!---->
+            <div th:replace="~{/fragments/filtration/period :: period}"></div>
+            <!---->
             <div class="row fs-5" th:each="each, status : ${files}" th:classappend="${!status.last} ? 'mb-3'">
                 <div class="col-12 d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
                     <div class="m-2 m-md-0">
