Добавил стиль, убирающий отступы hr слева и справа в формах и в элементах, имеющих класс .filter.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -72,3 +72,11 @@
     word-wrap: break-word;
     word-break: break-all;
 }
+
+form,
+.filter {
+    hr {
+        margin-left: -16px;
+        margin-right: -16px;
+    }
+}
