--- a/src/main/resources/templates/fragments/filtration/period.html
+++ b/src/main/resources/templates/fragments/filtration/period.html
@@ -41,7 +41,7 @@
                         </div>
                         <hr />
                         <div class="d-flex flex-row align-items-center justify-content-between">
-                            <button class="btn btn-primary" id="filter-apply-button">Применить</button>
+                            <button class="btn btn-primary" id="period-apply-button">Применить</button>
                             <button class="btn btn-outline-primary" type="button" id="filter-clear-button">Отменить</button>
                         </div>
                     </div>
