--- a/src/main/resources/templates/messages/dialogues.html
+++ b/src/main/resources/templates/messages/dialogues.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <!---->
-            <div th:replace="~{/fragments/filtration/filtration :: filtration}"></div>
+            <div th:replace="~{/fragments/selection/filtration :: filtration}"></div>
             <!---->
             <div class="row" th:each="each, status : ${dialogues}" th:classappend="${!status.last} ? 'mb-3'">
                 <div class="col-12" th:classappend="${!status.last} ? 'mb-3'">
@@ -53,14 +53,14 @@
                 </div>
             </div>
             <!---->
-            <div th:replace="~{/fragments/pagination/pagination :: pagination}"></div>
+            <div th:replace="~{/fragments/selection/pagination :: pagination}"></div>
             <!---->
         </div>
         <!---->
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
-        <script src="../../static/js/common/get-params.js" th:src="@{/js/common/get-params.js}"></script>
-        <script src="../../static/js/common/pagination.js" th:src="@{/js/common/pagination.js}"></script>
+        <script src="../../static/js/selection/filtration.js" th:src="@{/js/selection/filtration.js}"></script>
+        <script src="../../static/js/selection/pagination.js" th:src="@{/js/selection/pagination.js}"></script>
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
     </body>
