--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <!---->
-            <div th:replace="~{/fragments/filtration/filtration :: filtration}"></div>
+            <div th:replace="~{/fragments/selection/filtration :: filtration}"></div>
             <!---->
             <div class="row" th:each="each, status : ${users}" th:classappend="${!status.last} ? 'mb-3'">
                 <div class="col-12">
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <!---->
-            <div th:replace="~{/fragments/pagination/pagination :: pagination}"></div>
+            <div th:replace="~{/fragments/selection/pagination :: pagination}"></div>
             <!---->
         </div>
         <!---->
@@ -79,8 +79,8 @@
         <div th:replace="${param.patientId != null && currentUser.isAdministrator} ? ~{/fragments/modal/error-modal :: error-modal} : ~{}"></div>
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
-        <script src="../../static/js/common/get-params.js" th:src="@{/js/common/get-params.js}"></script>
-        <script src="../../static/js/common/pagination.js" th:src="@{/js/common/pagination.js}"></script>
+        <script src="../../static/js/selection/filtration.js" th:src="@{/js/selection/filtration.js}"></script>
+        <script src="../../static/js/selection/pagination.js" th:src="@{/js/selection/pagination.js}"></script>
         <script src="../../static/js/users/users.js" th:src="@{/js/users/users.js}"></script>
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
