Добавил заголовок фильтрации по аналогии с периодом, поправил подстановочный текст в radiobutton-ах в периоде.

--- a/src/main/resources/templates/fragments/selection/filtration.html
+++ b/src/main/resources/templates/fragments/selection/filtration.html
@@ -8,6 +8,11 @@
             <div class="col-12">
                 <div id="filter" class="collapse">
                     <div class="filter rounded fs-6 p-3 mb-5">
+                        <div class="d-flex flex-row align-items-center justify-content-between">
+                            <h5 class="text-secondary fs-5 mb-0">Фильтр</h5>
+                            <button type="button" data-bs-toggle="collapse" href="#filter" class="btn-close" aria-label="Close"></button>
+                        </div>
+                        <hr />
                         <div class="d-flex flex-row flex-wrap align-items-center justify-content-between">
                             <div class="mb-auto">
                                 <div class="m-2 m-lg-0">
