--- a/src/main/resources/templates/indicators/tables/pressure-table.html
+++ b/src/main/resources/templates/indicators/tables/pressure-table.html
@@ -20,22 +20,15 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <!--<div class="row fs-5 mb-5">
-                <h1 th:if="${isSelf}" class="text-center fs-3 mb-0">Динамика вашего давления</h1>
-                <h1 th:if="${!isSelf}" class="text-center fs-3 mb-0">
-                    Динамика давления пациента
-                    <span th:text="${patient.userInformation.fullName}" class="fw-bold">Петров Сергей Иванович</span>
-                </h1>
-            </div>-->
             <div class="row text-center text-md-start mb-5">
                 <div class="col-12">
                     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
                         <div class="m-2 mx-4 m-md-0 mx-md-0">
-                            <h1 class="fs-5">
+                            <h1 class="fs-5 mb-0">
                                 <span th:if="${isSelf}">Динамика вашего давления</span>
                                 <span th:if="${!isSelf}">Динамика давления</span>
                             </h1>
-                            <h2 th:if="${!isSelf}" class="fs-6">
+                            <h2 th:if="${!isSelf}" class="fs-6 mb-0">
                                 Пациент
                                 <span th:text="'&laquo;' + ${patient.userInformation.fullName} + '&raquo;'" class="fw-bold">Иванов Степан Петрович</span>
                             </h2>
@@ -46,6 +39,8 @@
                     </div>
                 </div>
             </div>
+            <!---->
+            <div th:replace="~{/fragments/selection/periodization :: periodization}"></div>
             <!---->
             <div class="row">
                 <div class="col-12">
